--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -46,11 +46,11 @@
             <div class="container">
                 <div class="header-navbar">
                     <div class="header-brand">
-                        <a href="index.html" class="logo logo-dark">
-                            <img src="{% static 'shop/assets/images/logo/logo.png' %}" alt="Site Logo">
+                        <a href="#" class="logo logo-dark">
+                            <img src="{% static '' %}" alt="Site Logo">
                         </a>
-                        <a href="index.html" class="logo logo-light">
-                            <img src="{% static 'shop/assets/images/logo/logo-light.png' %}" alt="Site Logo">
+                        <a href="#" class="logo logo-light">
+                            <img src="{% static '' %}" alt="Site Logo">
                         </a>
                     </div>
                     <div class="header-main-nav">
@@ -58,13 +58,13 @@
                         <nav class="mainmenu-nav">
                             <button class="mobile-close-btn mobile-nav-toggler"><i class="fas fa-times"></i></button>
                             <div class="mobile-nav-brand">
-                                <a href="index.html" class="logo">
-                                    <img src="{% static 'shop/assets/images/logo/logo.png' %}" alt="Site Logo">
+                                <a href="#" class="logo">
+                                    <img src="{% static '' %}" alt="Site Logo">
                                 </a>
                             </div>
                             <ul class="mainmenu">
                                 <li>
-                                    <a href="shop.html">Shop</a>
+                                    <a href="{% url 'home' %}">All In One</a>
                                 </li>
                             </ul>
                         </nav>
