--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -6228,7 +6228,7 @@ fieldset:disabled .btn {
 
 .modal-dialog-scrollable .modal-content {
     max-height: 100%;
-    overflow: hidden
+    overflow: hidden;
 }
 
 .modal-dialog-scrollable .modal-body {
