--- a/templates/shop/tiles.html
+++ b/templates/shop/tiles.html
@@ -3,27 +3,27 @@
 {% block title %}<title>Tiles || Shop</title>{% endblock title %}
 {% block view_modal %}
     <!-- Product Quick View Modal Start -->
-    <div class="modal fade quick-view-product" id="quick-view-modal" tabindex="-1" aria-hidden="true">
+    <div class="modal fade quick-view-product" id="quick-view-modal-{{forloop.counter}}" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"><i class="far fa-times"></i></button>
                 </div>
                 <div class="modal-body">
+
                     <div class="single-product-thumb">
                         <div class="row">
                             <div class="col-lg-7 mb--40">
                                 <div class="row">
                                     <div class="col-lg-10 order-lg-2">
-                                        <div class="single-product-thumbnail product-large-thumbnail axil-product thumbnail-badge zoom-gallery">
-                               
+                                        <div class="single-product-thumbnail  axil-product thumbnail-badge zoom-gallery">
                                             <div class="thumbnail">
-                                                <img src="{% static 'shop/assets/images/product/product-big-03.png' %}" alt="Product Images">
+                                                <img src="{{ i.image.url }}" alt="Product Images">
                                                 <div class="label-block label-right">
-                                                    <div class="product-badget">20% OFF</div>
+                                                    <div class="product-badget">{{i.discount_price}}</div>
                                                 </div>
                                                 <div class="product-quick-view position-view">
-                                                    <a href="{% static 'shop/assets/images/product/product-big-03.png' %}" class="popup-zoom">
+                                                    <a href="{{i.image.url}}" class="popup-zoom">
                                                         <i class="far fa-search-plus"></i>
                                                     </a>
                                                 </div>
@@ -36,13 +36,16 @@
                                 <div class="single-product-content">
                                     <div class="inner">
                                   
-                                        <h3 class="product-title">Serif Coffee Table</h3>
-                                        <span class="price-amount">$155.00 - $255.00</span>
+                                        <h3 class="product-title">{{i.name}}</h3>
+                                        <span class="price-amount">{{i.new_price}}</span>
                                         <ul class="product-meta">
-                                            <li><i class="fal fa-check"></i>In stock</li>
-                                            <li><i class="fal fa-check"></i>Free delivery available</li>
+                                            <li><i class="fal fa-check"></i>COMPANY: {{i.category.name}}</li>
+                                            <li><i class="fal fa-check"></i>CATEGORY: {{i.company_name.name}}</li>
+                                            <li><i class="fal fa-check"></i>{{i.imported_or_local}}</li>
+                                            <li><i class="fal fa-check"></i>PRODUCT NUMBER: {{i.product_number}}</li>
+                                            <li><i class="fal fa-check"></i>SIZE: {{i.size}}</li>
                                         </ul>
-                                        <p class="description">In ornare lorem ut est dapibus, ut tincidunt nisi pretium. Integer ante est, elementum eget magna. Pellentesque sagittis dictum libero, eu dignissim tellus.</p>
+                                        <li class="text-primary description">DESCRIPTION:<br>{{i.description}}</li>
 
 
                                         <!-- Start Product Action Wrapper  -->
@@ -53,7 +56,7 @@
 
                                             <!-- Start Product Action  -->
                                             <ul class="product-action d-flex-center mb--0">
-                                                <li class="add-to-cart"><a href="cart.html" class="axil-btn btn-bg-primary">Add to Cart</a></li>
+                                                <li class="add-to-cart"><a href="#" class="axil-btn btn-bg-primary">Add to Cart</a></li>
                                             </ul>
                                             <!-- End Product Action  -->
 
