changes in cart model

--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -159,7 +159,8 @@
                                 </div>
                                 <div class="product-hover-action">
                                     <ul class="cart-action">
-                                        <li class="select-option"><a href="#">Add to Cart</a></li>
+                                        
+                                        <li class="select-option"><a href="" hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'   hx-post={% url 'add_to_cart' i.pk %}>Add to Cart</a></li>
                                         <li class="quickview"><a style="cursor:pointer;" data-bs-toggle="modal" data-bs-target="#quick-view-modal-{{forloop.counter}}"><i class="far fa-eye"></i></a></li>
                                     </ul>
                                 </div>
@@ -429,7 +430,7 @@
     <!-- JS
 ============================================ -->
     <!-- Modernizer JS -->
-    <script src="{% static 'shop/assets/js/vendor/modernizr.min.js' %}"></script>
+    <script src="{% static 'js/htmx.js' %}"></script>
     <script src="{% static 'shop/assets/js/vendor/jquery.js' %}"></script>
     <script src="{% static 'shop/assets/js/vendor/popper.min.js' %}"></script>
     <script src="{% static 'shop/assets/js/vendor/bootstrap.min.js' %}"></script>
