--- a/templates/partials/showroom_card.html
+++ b/templates/partials/showroom_card.html
@@ -7,16 +7,15 @@
     <div class="row" >
 {% for i in a %}
 <div class="col-12 d-flex justify-content-center ">
-    <div class="card w-75 bg-dark">
+    <div class="card w-75 bg-dark"> 
       <div class="card-header border border-primary p-2">
         <h4 class=" ">{{i.showroom_name}}</h4>
       </div>
       <div class="card-body w-100">
-        <h6>&#8627; No. of Products : </h6>
         <h6>&#8627; Address : {{i.address}} </h6>
         <h6>&#8627; Since : {{i.since}} </h6>
       </div>
-      <a href="{% url '360_and_shop' i.id%}" class="card_btn">
+      <a href="{% url '360_and_shop' i.pk%}" class="card_btn">
         Launch 360° and Shop
      </a>
     </div>
