--- a/templates/shop/lights.html
+++ b/templates/shop/lights.html
@@ -51,12 +51,13 @@
                                         <!-- Start Product Action Wrapper  -->
                                         <div class="product-action-wrapper d-flex-center">
                                             <!-- Start Quentity Action  -->
-                                            <div class="pro-qty"><input type="text" value="1"></div>
+                                            {% comment %}<div class="pro-qty"><input name="quantity" type="text" value="1"></div>{% endcomment %}
                                             <!-- End Quentity Action  -->
 
                                             <!-- Start Product Action  -->
                                             <ul class="product-action d-flex-center mb--0">
-                                                <li class="add-to-cart"><a href="#" class="axil-btn btn-bg-primary">Add to Cart</a></li>
+                                                <li class="add-to-cart"><a href="#"  class="axil-btn btn-bg-primary">Add to Cart</a></li>
+                                                {% comment %}{% url 'add_to_cart' i.pk %}?next={{ request.path|urlencode }}{% endcomment %}
                                             </ul>
                                             <!-- End Product Action  -->
 
