--- a/templates/360.html
+++ b/templates/360.html
@@ -92,7 +92,7 @@
   
   <script src="{% static 'js/bootstrap.js' %}"></script>
     {% include 'messages.html' %}
-<script src="https://unpkg.com/htmx.org@1.8.5"></script>
+    <script src="{% static 'js/htmx.js' %}"></script>
 
 </body>
 
