--- a/templates/index.html
+++ b/templates/index.html
@@ -256,7 +256,7 @@
 
 
   
-  <script src="{% static 'js/htmx.js' %}"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/htmx/1.9.2/htmx.min.js"></script>
 
   <script src="{% static 'js/bootstrap.js' %}"></script>
   {% include 'messages.html' %}
