--- a/templates/shop/checkout.html
+++ b/templates/shop/checkout.html
@@ -55,7 +55,7 @@
                             </div>
                             <div class="form-group">
                                 <label>Email Address <span>*</span></label>
-                                <input name="email" required type="email" value="{{request.user.email}}" id="email">
+                                <input name="email" required type="email" placeholder="put valid email please" id="email">
                             </div>
                      
                             <div class="form-group">
