--- a/templates/email_template.html
+++ b/templates/email_template.html
@@ -45,7 +45,10 @@
   <div class="container">
     <p>Dear {{ recipient_name }},</p>
     <h1 class="site-header__title" data-lead-id="site-header-title">THANK YOU!</h1>
-    <p>{{message}}</p>
+    <p>{{message}}</p><br>
+    <p>Yor Ordered {{products_list}}.</p><br>
+    <p>For Further Detail Contact on {{office_phone_number}}.</p><br>
+    
 
     <p>Thank you for joining us!</p>
   </div>
