--- a/templates/email_template.html
+++ b/templates/email_template.html
@@ -27,25 +27,14 @@
       margin-bottom: 20px;
     }
 
-    .btn {
-      display: inline-block;
-      padding: 10px 20px;
-      background-color: #007bff;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 5px;
-    }
-
-    .btn:hover {
-      background-color: #0056b3;
-    }
+   
   </style>
 </head>
 <body>
   <div class="container">
     <p>Dear {{ recipient_name }},</p>
     <h1 class="site-header__title" data-lead-id="site-header-title">THANK YOU!</h1>
-    <p>{{message}}</p><br>
+    <p>Your order has been submitted to , We will Contact you in 24 hours.</p><br>
     <p>Yor Ordered {{products_list}}.</p><br>
     <p>For Further Detail Contact on {{office_phone_number}}.</p><br>
     
