--- a/templates/shop/checkout.html
+++ b/templates/shop/checkout.html
@@ -57,6 +57,7 @@
                                 <label>Email Address <span>*</span></label>
                                 <input name="email" required type="email" placeholder="put valid email please" id="email">
                             </div>
+                            <input name="total_amount" hidden value="{{subtotal}}">
                      
                             <div class="form-group">
                                 <label>Order Description </label>
