--- a/templates/shop/dashboard/product_list.html
+++ b/templates/shop/dashboard/product_list.html
@@ -1,5 +1,11 @@
+
 {% extends 'shop/dashboard/shop_dashboard_base.html' %} 
+{% load static %}
+
+
 {% block content %}
+<link href="{% static 'products_list.css' %}" rel="stylesheet">
+  
 <h1>All Products</h1>
 <div class="container">
   <div class="table-wrap">
