--- a/templates/shop/checkout.html
+++ b/templates/shop/checkout.html
@@ -51,7 +51,7 @@
                      
                             <div class="form-group">
                                 <label>Phone <span>*</span></label>
-                                <input name="phone" required type="tel" id="phone">
+                                <input name="phone" required type="number" id="phone">
                             </div>
                             <div class="form-group">
                                 <label>Email Address <span>*</span></label>
