--- a/templates/shop/dashboard/all_orders.html
+++ b/templates/shop/dashboard/all_orders.html
@@ -34,7 +34,7 @@
           <td class="text-uppercase">{{forloop.counter}}</td>
           <td class="text-uppercase">{{i.id}}</td>
           <td class="text-uppercase">Rs {{i.total_amount}}</td>
-          <td class="text-uppercase">{% if i.approved == True and i.delivered == True  %} <span class="badge bg-success text-wrap">Delivered</span> {% elif i.rejected == True %}<span class="badge bg-danger text-wrap"> Rejected </span>{% elif i.accepted == True  %} <span class="badge bg-info text-wrap">Accepted </span>{% else %} <span class="badge bg-warning text-wrap">Not viewed</span> {% endif %}</td>
+          <td class="text-uppercase">{% if i.accepted == True and i.delivered == True  %} <span class="badge bg-success text-wrap">Delivered</span> {% elif i.rejected == True %}<span class="badge bg-danger text-wrap"> Rejected </span>{% elif i.accepted == True  %} <span class="badge bg-info text-wrap">Accepted </span>{% else %} <span class="badge bg-warning text-wrap">Not viewed</span> {% endif %}</td>
           <td class="text-uppercase">{{i.created_at}}</td>
           <td>
             <a href="{% url 'invoice_order' i.id %}" class="btn btn-primary btn-sm">View Order</a>
