--- a/templates/shop/dashboard/invoice.html
+++ b/templates/shop/dashboard/invoice.html
@@ -13,21 +13,36 @@
     .content{font-size: 15px}
   
 </style>
-    <div class="d-flex justify-content-between">
-        <h4>Actions:</h4>
+    <div class="print_not_show d-flex justify-content-between">
+        <h5>Status: 
+            {% if order_detail.accepted == True  and order_detail.delivered == True %}
+            <button type="button" disabled class="btn btn-sm btn-danger">Order has been Delivered</button>
+            {% elif order_detail.rejected == True %}
+            <button type="button" disabled class="btn btn-sm btn-danger">Order has been Rejected </button>
+            {% elif order_detail.accepted == True %}
+            <button type="button" disabled class="btn btn-sm btn-danger">Order has been Accepted</button>
+            {% else  %}
+            <button type="button" disabled class="btn btn-sm btn-danger">Not Viewed</button>
+            {% endif %}
+        </h5>
         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-            <button type="button" class="btn btn-danger">Reject Order</button>
-            <button type="button" class="btn btn-warning">Accept Order</button>
-            <button type="button" class="btn btn-success">Delivered</button>
+            {% if order_detail.accepted == True  and order_detail.delivered == False %}
+            <a type="button" data-bs-toggle="modal" data-bs-target="#deliveredmodal" class="btn btn-success">Deliver this Order </a>
+            {% elif order_detail.rejected == False and order_detail.accepted == False%}
+            <a href="{% url 'reject_order' order_detail.id %}?next={{ request.path|urlencode }}" onclick="return rejectOrder();" class="btn btn-danger">Reject Order</a>
+            <a href="{% url 'accept_order' order_detail.id %}?next={{ request.path|urlencode }}" onclick="return acceptOrder();" class="btn btn-warning">Accept Order</a>
+            {% endif %}
+            <a onclick="window.print()" type="button" class="btn btn-info">Print Invoice</a>
           </div>
     </div>
+
 <div class="container mt-5 mb-3">
     <div class="row d-flex justify-content-center">
         <div class="col-md-8">
             <div class="card">
-                <div class="d-flex flex-row p-2"> 
-                    {% comment %}<img src="https://i.imgur.com/vzlPPh3.png" width="48">{% endcomment %}
-                    <div class="d-flex flex-column"> <span class="fw-bold">Order Invoice</span>{{order_detail.id}} </div>
+                <div class="d-flex flex-row p-2 mt-3 mb-3"> 
+                    <img src="https://i.imgur.com/vzlPPh3.png" width="48">
+                    <div class="d-flex flex-column"> <span class="fw-bold">Order Invoice</span># {{order_detail.id}} </div>
                 </div>
                 <hr>
                 <div class="table-responsive p-2">
@@ -53,7 +68,7 @@
                                 <td>Name</td>
                                 <td>Quantity</td>
                                 <td>Price</td>
-                                <td class="text-center">Total</td>
+                                <td class="text-center">SubTotal</td>
                             </tr>
                             {% for i in order_items %}
                             <tr class="content">
@@ -67,14 +82,17 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="products p-2">
+                <hr>
+                <div class="products p-2 mt-5">
                     <table class="table table-borderless">
                         <tbody>
                             <tr class="add">
-                                <td class="text-end">Total</td>
+                                <td class="">Payement Method</td>
+                                <td class="">Total</td>
                             </tr>
                             <tr class="content">
-                                <td class="fw-bold text-end">Payable Amount: {{total}}</td>
+                                <td class="fw-bold ">Cash On Delivery</td>
+                                <td class="fw-bold ">Payable Amount: {{total}}</td>
                             </tr>
                         </tbody>
                     </table>
@@ -84,4 +102,40 @@
         </div>
     </div>
 </div>
+
+<!-- deliver modal and send mail Modal -->
+<div class="modal fade" id="deliveredmodal" tabindex="-1" aria-labelledby="deliveredmodalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="deliveredmodalLabel">Delivery Confirmation</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form method="POST" action="{% url 'deliver_order' order_detail.id %}?next={{ request.path|urlencode }}">
+            {% csrf_token %}
+            <label class="form-label">Your Message:</label>
+            <textarea required name="email_message" class="form-control"  aria-describedby="Help"></textarea>
+            <div id="Help" class="form-text">We'll send this message to this customer via email.This message will not save anyware.</div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="submit" class="btn btn-primary">Confirm and send mail</button>
+        </div>
+    </form>
+
+      </div>
+    </div>
+  </div>
+
+<script>
+    function rejectOrder() {
+        return confirm("Are you sure you want to reject this order?Your can't able to change this.We send an email to this customer on rejection.");
+    }
+    
+    
+    function acceptOrder() {
+        return confirm("Are you sure you want to accept this order?Your can't able to change this.We send an email to this customer on accepted order.");
+    }
+</script>
 {% endblock content %}
