--- a/templates/shop/dashboard/invoice.html
+++ b/templates/shop/dashboard/invoice.html
@@ -41,7 +41,7 @@
         <div class="col-md-8">
             <div class="card">
                 <div class="d-flex flex-row p-2 mt-3 mb-3"> 
-                    <img src="https://i.imgur.com/vzlPPh3.png" width="48">
+                    <img src="{{settings.shop_logo.url}}" width="48">
                     <div class="d-flex flex-column"> <span class="fw-bold">Order Invoice</span># {{order_detail.id}} </div>
                 </div>
                 <hr>
