--- a/templates/shop/dashboard/settings.html
+++ b/templates/shop/dashboard/settings.html
@@ -18,6 +18,7 @@
                   </div>
                   <div class="form-group">
                     {{ form.phone|as_crispy_field }}
+                    {{ form.shop_logo|as_crispy_field }}
                     {{ form.android_app_link|as_crispy_field }}
                   </div>
                 </div>
