--- a/templates/shop/dashboard/product_list.html
+++ b/templates/shop/dashboard/product_list.html
@@ -28,7 +28,7 @@
           <td class="text-center">
             <img
               class="pic"
-              src="{{i.image}}"
+              src="{{i.image.url}}"
               alt=""
             />
           </td>
