--- a/templates/shop/dashboard/shop_dashboard_base.html
+++ b/templates/shop/dashboard/shop_dashboard_base.html
@@ -49,6 +49,12 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{% url 'shop_dashboard' %}">
               <span data-feather="home" class="align-text-bottom"></span>
+              Dashboard
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link " aria-current="page" href="{% url 'all_products' %}">
+              <span data-feather="shopping-cart" class="align-text-bottom"></span>
               All Products
             </a>
           </li>
@@ -98,7 +104,7 @@
 
     <main class=" col-md-9 ms-sm-auto col-lg-10 px-md-4">
       <div class="print_not_show d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class=" h2">Dashboard</h1>
+        <h1 class=" h2"><a class="text-decoration-none" href="{% url 'shop_dashboard' %}">Dashboard</a></h1>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group me-2">
             <a href ="{% url 'add_product' %}" class="btn btn-sm btn-outline-warning">Add Product</a>
