--- a/templates/shop/dashboard/invoice.html
+++ b/templates/shop/dashboard/invoice.html
@@ -1,203 +1,222 @@
-{% extends 'shop/dashboard/shop_dashboard_base.html' %} 
+{% extends 'shop/dashboard/shop_dashboard_base.html' %}
 {% block content %}
-{% load mathfilters %}   <!-- Add this line -->
+{% load mathfilters %} <!-- Add this line -->
 
 <style>
+  .add  {
+    color: #c5c4c4;
+    text-transform:
+      uppercase;
+    font-size: 12px;
+    font-weight: bold;
+  }
 
-    .add td{color: #c5c4c4;
-        text-transform: 
-        uppercase;
-        font-size: 12px;
-        font-weight: bold;
-    }
-    .content{font-size: 15px}
-    .card{
-        height: fit-content !important;
-    }
-  
+  .content {
+    font-size: 15px
+  }
+
+  .card {
+    height: fit-content !important;
+  }
 </style>
-    <div class="print_not_show d-flex justify-content-between">
-        <h5>Status: 
-            {% if order_detail.accepted == True  and order_detail.delivered == True %}
-            <button type="button" disabled class="btn btn-sm btn-danger">Order has been Delivered</button>
-            {% elif order_detail.rejected == True %}
-            <button type="button" disabled class="btn btn-sm btn-danger">Order has been Rejected </button>
-            {% elif order_detail.accepted == True %}
-            <button type="button" disabled class="btn btn-sm btn-danger">Order has been Accepted</button>
-            {% else  %}
-            <button type="button" disabled class="btn btn-sm btn-danger">Not Viewed</button>
-            {% endif %}
-        </h5>
-        <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-            {% if order_detail.accepted == True  and order_detail.delivered == False %}
-            <a type="button" data-bs-toggle="modal" data-bs-target="#deliveredmodal" class="btn btn-success">Deliver this Order </a>
-            {% elif order_detail.rejected == False and order_detail.accepted == False%}
-            <a href="{% url 'reject_order' order_detail.id %}?next={{ request.path|urlencode }}" onclick="return rejectOrder();" class="btn btn-danger">Reject Order</a>
-            <a href="{% url 'accept_order' order_detail.id %}?next={{ request.path|urlencode }}" onclick="return acceptOrder();" class="btn btn-warning">Accept Order</a>
-            {% endif %}
-            <a  type="button" data-bs-toggle="modal" data-bs-target="#tagsmodal" class="btn btn-info">Print Tags</a>
-            <a onclick="window.print()" type="button" class="btn btn-outline-info">Print Invoice</a>
-          </div>
-    </div>
+<div class="print_not_show d-flex justify-content-between">
+  <h5>Status:
+    {% if order_detail.accepted == True and order_detail.delivered == True %}
+    <button type="button" disabled class="btn btn-sm btn-danger">Order has been Delivered</button>
+    {% elif order_detail.rejected == True %}
+    <button type="button" disabled class="btn btn-sm btn-danger">Order has been Rejected </button>
+    {% elif order_detail.accepted == True %}
+    <button type="button" disabled class="btn btn-sm btn-danger">Order has been Accepted</button>
+    {% else %}
+    <button type="button" disabled class="btn btn-sm btn-danger">Not Viewed</button>
+    {% endif %}
+  </h5>
+  <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+    {% if order_detail.accepted == True and order_detail.delivered == False %}
+    <a type="button" data-bs-toggle="modal" data-bs-target="#deliveredmodal" class="btn btn-success">Deliver this Order
+    </a>
+    {% elif order_detail.rejected == False and order_detail.accepted == False%}
+    <a href="{% url 'reject_order' order_detail.id %}?next={{ request.path|urlencode }}" onclick="return rejectOrder();"
+      class="btn btn-danger">Reject Order</a>
+    <a href="{% url 'accept_order' order_detail.id %}?next={{ request.path|urlencode }}" onclick="return acceptOrder();"
+      class="btn btn-warning">Accept Order</a>
+    {% endif %}
+    <a type="button" data-bs-toggle="modal" data-bs-target="#tagsmodal" class="btn btn-info">Print Tags</a>
+    <a onclick="window.print()" type="button" class="btn btn-outline-info">Print Invoice</a>
+  </div>
+</div>
 
 <div class="show_data_on_print container mt-5 mb-3">
-    <div class="row d-flex justify-content-center">
-        <div class="col-md-8">
-            <div class="card">
-                <div class="d-flex flex-row p-2 mt-3 mb-3"> 
-                    <img src="{{settings.shop_logo.url}}" width="48">
-                    <div class="d-flex flex-column"> <span class="fw-bold">Order Invoice</span># {{order_detail.id}} </div>
-                </div>
-                <hr>
-                <div class="table-responsive p-2">
-                    <table class="table table-borderless">
-                        <tbody>
-                            <tr class="add">
-                                <td>To</td>
-                                <td>From</td>
-                            </tr>
-                            <tr class="content">
-                                <td class="fw-bold">{{order_detail.first_name}} <br>{{order_detail.street_address}} <br>{{order_detail.city}}</td>
-                                <td class="fw-bold">{{order_detail.showroom.showroom_name}} <br> {{order_detail.showroom.address}} </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <hr>
-                <div class="products p-2">
-                    <table class="table table">
-                        <tbody>
-                            <tr class="add">
-                                <td>#</td>
-                                <td>Name</td>
-                                <td>Quantity</td>
-                                <td>Price</td>
-                                <td class="text-center">SubTotal</td>
-                            </tr>
-                            {% for i in order_items %}
-                            <tr class="content">
-                                <td>{{forloop.counter}}</td>
-                                <td>{{i.product.title}}</td>
-                                <td>{{i.quantity}}</td>
-                                <td>{{i.product.new_price}}</td>
-                                <td class="text-center">{{i.product.new_price|mul:i.quantity}}</td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-                <hr>
-                <div class="products p-2 mt-5">
-                    <table class="table table-borderless">
-                        <tbody>
-                            <tr class="add">
-                                <td class="">Payement Method</td>
-                                <td class="">Total</td>
-                            </tr>
-                            <tr class="content">
-                                <td class="fw-bold ">Cash On Delivery</td>
-                                <td class="fw-bold ">Payable Amount: {{total}}</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                
+  <div class="row d-flex justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="d-flex flex-row p-2 mt-3 mb-3">
+          <img src="{{settings.shop_logo.url}}" width="48">
+          <div class="d-flex flex-column"> <span class="fw-bold">Order Invoice</span># {{transaction.transaction_id}} </div>
+        </div>
+        <hr>
+        <div class="table-responsive p-2">
+          <table class="table table-borderless">
+            <tbody>
+              <tr class="add">
+                <td>To</td>
+                <td>From</td>
+              </tr>
+              <tr class="content">
+                <td class="fw-bold">{{order_detail.first_name}} <br>{{order_detail.street_address}}
+                  <br>{{order_detail.city}}</td>
+                <td class="fw-bold">{{order_detail.showroom.showroom_name}} <br> {{order_detail.showroom.address}} </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <hr>
+        <div class="products p-2">
+          <table class="table table">
+            <tbody>
+              <tr class="add">
+                <td>#</td>
+                <td>Name</td>
+                <td>Quantity</td>
+                <td>Price</td>
+                <td class="text-center">SubTotal</td>
+              </tr>
+              {% for i in order_items %}
+              <tr class="content">
+                <td>{{forloop.counter}}</td>
+                <td>{{i.product.title}}</td>
+                <td>{{i.quantity}}</td>
+                <td>{{i.product.new_price}}</td>
+                <td class="text-center">{{i.product.new_price|mul:i.quantity}}</td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+        <hr>
+        <div class="products p-2 mt-5">
+         <div class="row">
+          <div class="col-6">
+            <div class="mb-4 add">
+              Payement Method<br>
             </div>
-        </div>
-    </div>
-</div>
-
-<!-- deliver modal and send mail Modal -->
-<div class="modal fade" id="deliveredmodal" tabindex="-1" aria-labelledby="deliveredmodalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="deliveredmodalLabel">Delivery Confirmation</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <form method="POST" action="{% url 'deliver_order' order_detail.id %}?next={{ request.path|urlencode }}">
-            {% csrf_token %}
-            <label class="form-label">Your Message:</label>
-            <textarea required name="email_message" class="form-control"  aria-describedby="Help"></textarea>
-            <div id="Help" class="form-text">We'll send this message to this customer via email.This message will not save anyware.</div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-primary">Confirm and send mail</button>
-        </div>
-    </form>
-
-      </div>
-    </div>
-</div>
-
-
-
-  <!-- Tags Modal -->
-
-
-
-  <div class="modal modal-xl fade" id="tagsmodal" tabindex="-1" aria-labelledby="tagsmodalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-fullscreen">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1  class="print_not_show modal-title fs-5" id="tagsmodalLabel">Print Tags</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="show_data_on_print d-flex modal-body">
-            <div class="card w-50">
-                <div class="card-body">
-                  <blockquote class="blockquote blockquote-custom bg-white px-3 pt-4">
-                    <div class="blockquote-custom-icon bg-info shadow-1-strong">
-                      <i class="fa fa-quote-left text-white"></i>
-                    </div>
-                    <p class="mb-0 mt-2 font-italic">From:</p>
-                    <hr>
-                    <p class="mb-0 mt-2 font-italic">
-                      {{order_detail.showroom.showroom_name}} <br> {{order_detail.showroom.address}}
-                    </p>
-                    <footer class="blockquote-footer pt-4 mt-4 border-top">
-                        Today's date: {% now "Y-m-d" %}
-                    </footer>
-                  </blockquote>
-                </div>
-              </div>
-            <div class="ms-3 card w-50">
-                <div class="card-body">
-                  <blockquote class="blockquote blockquote-custom bg-white px-3 pt-4">
-                    <div class="blockquote-custom-icon bg-info shadow-1-strong">
-                      <i class="fa fa-quote-left text-white"></i>
-                    </div>
-                    <p class="mb-0 mt-2 font-italic">To:</p>
-                    <hr>
-                    <p class="mb-0 mt-2 font-italic">
-                    {{order_detail.first_name}} <br>{{order_detail.street_address}} <br>{{order_detail.city}}
-                    </p>
-                    <footer class="blockquote-footer pt-4 mt-4 border-top">
-                        Today's date: {% now "Y-m-d" %}
-                    </footer>
-                  </blockquote>
-                </div>
-              </div>
-        </div>
-        <div class="print_not_show modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button onclick="window.print()" type="button" class="btn btn-primary">Print Tags</button>
+            <span class=" fw-bold content">Cash On Delivery</span>
+          </div>
+          <div class="col-6">
+            <div class="mb-4 add">
+              Payeable Amount<br>
+            </div>
+            <span class=" fw-bold content">Subtotal: {{total}}</span><br>
+            <span class=" fw-bold content">Shipping Amount: {{transaction.shipping_amount}}</span><br>
+            <span class=" fw-bold content">Total Amount: {{total|add:transaction.shipping_amount}}</span><br>
+          </div>
+         </div>
         </div>
 
       </div>
     </div>
   </div>
+</div>
+
+<!-- deliver modal and send mail Modal -->
+<div class="modal fade" id="deliveredmodal" tabindex="-1" aria-labelledby="deliveredmodalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="deliveredmodalLabel">Delivery Confirmation</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form method="POST" action="{% url 'deliver_order' order_detail.id %}?next={{ request.path|urlencode }}">
+          {% csrf_token %}
+          <label class="form-label">Your Message:</label>
+          <textarea required name="email_message" class="form-control" aria-describedby="Help"></textarea>
+          <div id="Help" class="form-text">We'll send this message to this customer via email.This message will not save
+            anyware.</div>
+          <label class="form-label">Total Payable:</label>
+          <input disabled value="{{total}}" required class="form-control" aria-describedby="Help">
+          <input hidden value="{{total}}" required name="total_payable" class="form-control" aria-describedby="Help">
+          <div id="Help" class="form-text">This will be taken automatically.</div>
+          <label class="form-label">Shipping Amount:</label>
+          <input type="number" required name="shipping_amount" class="form-control" aria-describedby="Help">
+          <div id="Help" class="form-text">Please give shipping amount that can be added to invoice.</div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="submit" class="btn btn-primary">Confirm and send mail</button>
+      </div>
+      </form>
+
+    </div>
+  </div>
+</div>
+
+
+
+<!-- Tags Modal -->
+
+
+
+<div class="modal modal-xl fade" id="tagsmodal" tabindex="-1" aria-labelledby="tagsmodalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-fullscreen">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="print_not_show modal-title fs-5" id="tagsmodalLabel">Print Tags</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="show_data_on_print d-flex modal-body">
+        <div class="card w-50">
+          <div class="card-body">
+            <blockquote class="blockquote blockquote-custom bg-white px-3 pt-4">
+              <div class="blockquote-custom-icon bg-info shadow-1-strong">
+                <i class="fa fa-quote-left text-white"></i>
+              </div>
+              <p class="mb-0 mt-2 font-italic">From:</p>
+              <hr>
+              <p class="mb-0 mt-2 font-italic">
+                {{order_detail.showroom.showroom_name}} <br> {{order_detail.showroom.address}}
+              </p>
+              <footer class="blockquote-footer pt-4 mt-4 border-top">
+                Today's date: {% now "Y-m-d" %}
+              </footer>
+            </blockquote>
+          </div>
+        </div>
+        <div class="ms-3 card w-50">
+          <div class="card-body">
+            <blockquote class="blockquote blockquote-custom bg-white px-3 pt-4">
+              <div class="blockquote-custom-icon bg-info shadow-1-strong">
+                <i class="fa fa-quote-left text-white"></i>
+              </div>
+              <p class="mb-0 mt-2 font-italic">To:</p>
+              <hr>
+              <p class="mb-0 mt-2 font-italic">
+                {{order_detail.first_name}} <br>{{order_detail.street_address}} <br>{{order_detail.city}}
+              </p>
+              <footer class="blockquote-footer pt-4 mt-4 border-top">
+                Today's date: {% now "Y-m-d" %}
+              </footer>
+            </blockquote>
+          </div>
+        </div>
+      </div>
+      <div class="print_not_show modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button onclick="window.print()" type="button" class="btn btn-primary">Print Tags</button>
+      </div>
+
+    </div>
+  </div>
+</div>
 
 <script>
-    function rejectOrder() {
-        return confirm("Are you sure you want to reject this order?Your can't able to change this.We send an email to this customer on rejection.");
-    }
-    
-    
-    function acceptOrder() {
-        return confirm("Are you sure you want to accept this order?Your can't able to change this.We send an email to this customer on accepted order.");
-    }
+  function rejectOrder() {
+    return confirm("Are you sure you want to reject this order?Your can't able to change this.We send an email to this customer on rejection.");
+  }
+
+
+  function acceptOrder() {
+    return confirm("Are you sure you want to accept this order?Your can't able to change this.We send an email to this customer on accepted order.");
+  }
 </script>
 {% endblock content %}
