--- a/templates/shop/dashboard/dashboard_signin.html
+++ b/templates/shop/dashboard/dashboard_signin.html
@@ -13,14 +13,12 @@
 
     
 
-<link rel="stylesheet" href="{% static '../assets/dist/css/bootstrap.min.css' %}" >
-<!-- Custom styles for this template -->
-<link rel="stylesheet" href="{% static 'sign-in.css' %}" >
+<link  href="{% static 'assets/dist/css/bootstrap.min.css' %}" rel="stylesheet">
 
-   
 
     
-    
+    <!-- Custom styles for this template -->
+    <link href="{% static 'sign-in.css' %}"  rel="stylesheet">
   </head>
   <body class="text-center">
 
