--- a/templates/shop/dashboard/shop_dashboard_base.html
+++ b/templates/shop/dashboard/shop_dashboard_base.html
@@ -52,6 +52,12 @@
               Dashboard
             </a>
           </li>
+          <li class="nav-item active">
+            <a class="nav-link {% if request.resolver_match.view_name == 'google_analytics' %} active{% endif %} "  aria-current="page" href="{% url 'google_analytics' %}">
+              <span data-feather="home" class="align-text-bottom"></span>
+              Analytics
+            </a>
+          </li>
           <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.view_name == 'all_orders' %} active{% endif %}" href="{% url 'all_orders' %}">
               <span data-feather="file" class="align-text-bottom"></span>
