--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -248,7 +248,7 @@
     </div>
     <!-- Header Search Modal End -->
 
-{% include "../messages.html" %}
+{% include "messages.html" %}
     
     <!-- JS
     
