--- a/templates/shop/dashboard/shop_dashboard_base.html
+++ b/templates/shop/dashboard/shop_dashboard_base.html
@@ -15,7 +15,7 @@
 
     
 
-<link href="{% static '../assets/dist/css/bootstrap.min.css' %}" rel="stylesheet">
+<link href="{% static 'assets/dist/css/bootstrap.min.css' %}" rel="stylesheet">
 
 
     <!-- Custom styles for this template -->
@@ -135,7 +135,7 @@
 
   </script>
 
-    <script src="{% static '../assets/dist/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'assets/dist/js/bootstrap.bundle.min.js' %}"></script>
 
       <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js" integrity="sha384-gdQErvCNWvHQZj6XZM0dNsAoY4v+j5P1XDpNkcM3HJG1Yx04ecqIHk7+4VBOCHOG" crossorigin="anonymous"></script>
       <script src="{% static 'dashboard.js' %}"></script>
