--- a/templates/partials/showroom_card.html
+++ b/templates/partials/showroom_card.html
@@ -1,4 +1,4 @@
-{% if request.user.is_superuser or request.user.sale_man %}
+{% if  request.user.sale_man or request.user.is_superuser  %}
 <div class="modal-header ">
     <h1 class="modal-title fs-5 text-uppercase " id="listmodalLabel">List of {{title}} showrooms</h1>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
